<resources>
    <string name="app_name">MyEyes</string>
    <string name="my_eyes">My Eyes</string>
    <string name="call">Call</string>
    <string name="battery">Battery</string>
    <string name="your_device_is_charging">your device is charging</string>
    <string name="_100">100%</string>
    <string name="object_detection">Object Detection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inbox_is_empty">No Data</string>
    <string name="to">To</string>
    <string name="message">Message</string>
    <string name="device_power">cihazınız sarj oluyor</string>
    <string name="device_not_power">cihazınız sarj olmuyor</string>
    <string name="message_listen_inbox">Gelen kutusu, mesajları dinlemek için mesaja tıklayınız</string>
    <string name="message_listen_outbox">Gönderilen kutusu, mesajları dinlemek için mesaja tıklayınız</string>
    <string name="inbox_start_text">gelen mesaj kutusu boş, gönderilen mesajı görmek için sola kaydırabilirsiniz</string>
    <string name="outbox_start_text">gönderilen mesaj kutusu boş, yeni mesaj göndermek için sola kaydırabilirsiniz</string>
    <string name="message_start_text">Mesaj göndermek istediğiniz kişiyi seçin, rehberde var olmayan birine mesaj yollamak istiyorsanız ekrana uzunca basın veya sağ alttaki butona tıklayın.</string>
    <string name="device_charching">ve cihazınız şarj oluyor</string>
    <string name="device_not_charching">ve cihazınınz sarj olmuyor</string>
    <string name="backspace">backspace</string>
    <string name="digit">%1$s tıklandı</string>
    <string name="dial_pad_welcome_speak">Aramak istediğiniz kişinin numarasını tıklayınız.Rehberde var olan birini aramak istiyorsanız ekranı yana kaydırın.</string>
    <string name="_1">1</string>
    <string name="hash">#</string>
    <string name="_0">0</string>
    <string name="ast">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="_5">5</string>
    <string name="four">4</string>
    <string name="_3">3</string>
    <string name="two">2</string>
    <string name="_6">6</string>
    <string name="inbox">Gelen Kutusu</string>
    <string name="outbox">Giden Kutusu</string>
    <string name="new_message">Yeni Mesaj</string>
    <string name="contact">Rehber</string>
    <string name="dial_pad">Tuş Takımı</string>
    <string name="my_eyes_login">My Eyes uygulamasına hoş geldiniz, ayrıntıları öğrenmek için ekranın farklı boyutuna tıklayın</string>
    <string name="battery_login">pil özelliğini tıkladınız, giriş yapmak için çift tıklayınız</string>
    <string name="message_login">mesaj özelliğini tıkladınız, giriş yapmak için çift tıklayınız</string>
    <string name="call_login">Arama özelliğini tıkladınız, giriş yapmak için çift tıklayınız</string>
    <string name="permission_settings_message">Bu uygulamanın bu özelliği kullanması için izne ihtiyacı var.Bunları uygulama ayarlarından verebilirsiniz</string>
    <string name="permission_error_message">Bu özelliği kullanmak için gerekli izinleri uygulama ayarlarından veriniz</string>
    <string name="object_detection_login">Nesne tespiti özelliğine tıkladınız, giriş yapmak için çift tıklayınız</string>
    <string name="battery_charging_information">pil seviyeniz yüzde %1$s ve cihazınız şarj oluyor</string>
    <string name="battery_not_charging_information">pil seviyeniz yüzde %1$s ve cihazınız şarj olmuyor</string>
    <string name="user_call_speak">%1$s adlı kişiye tıkladınız, aramak istiyorsanız çift tıklayın</string>
    <string name="user_message_speak">%1$s adlı kişiye tıkladınız, mesaj atmak için çift tıklayınız</string>
    <string name="call_user">%1$s aranıyor</string>
    <string name="call_options">Call Options</string>
    <string name="tap_once_read_number">Tap Once: Read number</string>
    <string name="tap_twice_call_number">Tap Twice: Call Number</string>
    <string name="tap_thrice_cancel">Tap Thrice: Cancel</string>
    <string name="title_activity_options">OptionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="calling">aranıyor</string>
    <string name="calling_user">%1$s aranıyor</string>
    <string name="phone_number_empty">Telefon numarası boş</string>
    <string name="phone_number_deleted">Telefon numarası tamamen silindi</string>
    <string name="digit_deleted">%1$s silindi</string>
    <string name="new_message_fab_message">Yeni mesaj butonuna tıkladınız, onaylamak için çift tıklayınız.</string>
    <string name="camera_error">Error Opening Camera</string>

</resources>